# Nvy

./: .gitmodules  CMakeLists.txt  README.md
_external/: CMakeLists.txt
nvim_frontend/: grid_size.h  nvim_frontend.cpp  nvim_frontend.h  nvim_pipe.cpp  nvim_redraw.cpp  nvim_redraw.h  nvim_renderer.h
nvim_renderer_d2d/: dx_helper.h  renderer.cpp
samples/: CMakeLists.txt
samples/coroutine_sample/: CMakeLists.txt  main.cpp  window.cpp  window.h
src/: CMakeLists.txt  commandline.h  cursor.h  grid.cpp  grid.h  hl.h  main.cpp  mpack_helper.h  nvim.cpp  nvim.h  nvim_frontend.cpp  nvim_frontend.h  nvim_grid.cpp  nvim_grid.h  nvim_pipe.cpp  nvim_pipe.h  nvim_redraw.cpp  nvim_redraw.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  vec.h  win32window.cpp  win32window.h  window_messages.h
src/nvim/: nvim.cpp  nvim.h
src/renderer/: d3d.cpp  d3d.h  grid.cpp  grid.h  renderer.cpp  renderer.h  swapchain.cpp
